# ezquiz

./: README.md  pyproject.toml
examples/: spanish_conj.py
src/ezquiz/: __init__.py  apigame.py  cligame.py  ezquiz.py
src/ezquiz/static/js/: api.js  diff.js  main.js  state.js  theme.js
src/ezquiz/static/js/views/: quiz.js  results.js  setup.js  sidebar.js
src/ezquiz/templates/: base.html  index.html  lobby.html
src/ezquiz/templates/components/: quiz_view.html  setup_view.html  sidebar.html
src/quizzer/: __init__.py  apigame.py  quizzer.py
src/quizzer/templates/: index.html
tests/: basic_addition.py  fill_mode_test.py  multi_quiz_demo.py  shared_category_test.py
