[project]
name = "quizzer"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alejandro Rodriguez", email = "alejandro.rodriguez@alexanderthamm.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
