[project]
name = "ezquiz"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Alejandro Rodriguez", email = "alejandro.rodriguez@alexanderthamm.com" },
]
dependencies = [
  "fastapi>=0.128.0",
  "jinja2>=3.1.6",
  "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
